# muzilee-gemini-image-skills

./: ARCHITECTURE.md  LICENSE  README.md  SKILL.md  package.json  pyproject.toml
protocol/: catalog.json
scripts/: build-worker.mjs
src/muzilee_gemini_image_skills/: config.py
src/muzilee_gemini_image_skills/application/: __init__.py  artifact_store.py  capability_service.py  setup_service.py  task_service.py
src/muzilee_gemini_image_skills/cli/: commands.py  main.py
src/muzilee_gemini_image_skills/contracts/: __init__.py  error_codes.py  protocol_loader.py  result_models.py  task_models.py  task_types.py
src/muzilee_gemini_image_skills/server/: app.py  json_io.py  routes_agent.py  routes_worker.py
src/muzilee_gemini_image_skills/state/: __init__.py  models.py  task_queue.py  worker_registry.py
tests/python/: test_contracts.py  test_server_integration.py  test_services.py  test_state.py
tests/worker/: extract_image.test.js  model_and_runtime.test.js  preview_replacement.test.js  reference_images.test.js  remove_watermark.test.js  watermark_flow.test.js
userscripts/: gemini_web_worker.user.js
worker-src/: index.js
worker-src/bridge/: download_capture.js
worker-src/dom/: query.js  selectors.js  wait.js
worker-src/features/chat/: new_chat.js
worker-src/features/image/: download_fullsize.js  embedded_alpha_maps.js  extract_image.js  image_result.js  preview_watermark_replacement.js  remove_watermark.js  watermark_core.js  watermark_runtime.js  (+1 more)
worker-src/runtime/: execute_task.js  heartbeat.js  task_loop.js
worker-src/transport/: http.js
(+5 files in other folders)
